added lesson collection and index page

--- a/404.html
+++ b/404.html
@@ -3,50 +3,21 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
   <link rel="stylesheet" href="/assets/css/site.css">
 </head>
 
 <body class="bg-gray-200">
   <!--herobar-->
-  <div class="w-full bg-blue-500 h-12 shadow-outline text-white">
+  <div class=" bg-blue-500 h-12 shadow-outline text-white">
     <h1 class="text-center text-3xl font-extrabold uppercase ">Mr Baggins Computer Technology</h1>
   </div>
 
-  <div class="container flex mx-auto flex-wrap px-2">
-    <div class="w-1/5 px-6 text-xl text-gray-800 leading-normal">
-      <!--SideMenu-->
-      <div class="w-full sticky inset-0 my-12 hidden" style="top: 2em;"> <!--I hid the menu with this line-->
-        <p class="text-base font-bold text-gray-700">Menu</p>
-        <div>
-          <ul class="list-reset text-gray-700 text-sm">
-            <li class="my-2 hover:text-blue-400 border-l-4 border-blue-500 hover:border-blue-400">
-              <a href="#section1" class="block pl-4">
-                Home
-              </a>
-            </li>
-            <li class="my-2 hover:text-blue-400 border-l-4 border-blue-500 hover:border-blue-400">
-              <a href="#section2" class="block pl-4">
-                Tasks
-              </a>
-            </li>
-            <li class="my-2 hover:text-blue-400 border-l-4 border-blue-500 hover:border-blue-400">
-              <a href="#section3" class="block pl-4">
-                Messages
-              </a>
-            </li>
-            <li class="my-2 hover:text-blue-400 border-l-4 border-blue-500 hover:border-blue-400">
-              <a href="#section4" class="block pl-4">
-                Analytics
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="w-4/5 my-4">
-      <div class="rounded shadow bg-gray-100 py-4 px-8 my-2" id="section1">
-        <a href="#" class="block text-2xl font-bold">Lesson Content</a>
+  <div class=" container flex mx-auto flex-wrap px-2">
+    
+    <div class="my-4">
+      <div class="w-full rounded shadow bg-gray-100 py-4 px-8 my-2" id="section1">
         <style type="text/css" media="screen">
   .container {
     margin: 10px auto;
