--- a/arduino/buzzer2/index.html
+++ b/arduino/buzzer2/index.html
@@ -3,57 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Buzzer 2</title>
   <link rel="stylesheet" href="/assets/css/site.css">
 </head>
 
 <body class="bg-gray-200">
   <!--herobar-->
-  <div class="w-full bg-blue-500 h-12 shadow-outline text-white">
+  <div class=" bg-blue-500 h-12 shadow-outline text-white">
     <h1 class="text-center text-3xl font-extrabold uppercase ">Mr Baggins Computer Technology</h1>
   </div>
 
-  <div class="container flex mx-auto flex-wrap px-2">
-    <div class="w-1/5 px-6 text-xl text-gray-800 leading-normal">
-      <!--SideMenu-->
-      <div class="w-full sticky inset-0 my-12 hidden" style="top: 2em;"> <!--I hid the menu with this line-->
-        <p class="text-base font-bold text-gray-700">Menu</p>
-        <div>
-          <ul class="list-reset text-gray-700 text-sm">
-            <li class="my-2 hover:text-blue-400 border-l-4 border-blue-500 hover:border-blue-400">
-              <a href="#section1" class="block pl-4">
-                Home
-              </a>
-            </li>
-            <li class="my-2 hover:text-blue-400 border-l-4 border-blue-500 hover:border-blue-400">
-              <a href="#section2" class="block pl-4">
-                Tasks
-              </a>
-            </li>
-            <li class="my-2 hover:text-blue-400 border-l-4 border-blue-500 hover:border-blue-400">
-              <a href="#section3" class="block pl-4">
-                Messages
-              </a>
-            </li>
-            <li class="my-2 hover:text-blue-400 border-l-4 border-blue-500 hover:border-blue-400">
-              <a href="#section4" class="block pl-4">
-                Analytics
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="w-4/5 my-4">
-      <div class="rounded shadow bg-gray-100 py-4 px-8 my-2" id="section1">
-        <a href="#" class="block text-2xl font-bold">Lesson Content</a>
+  <div class=" container flex mx-auto flex-wrap px-2">
+    
+    <div class="my-4">
+      <div class="w-full rounded shadow bg-gray-100 py-4 px-8 my-2" id="section1">
         <h1 id="arduino-tutorial---making-music">Arduino Tutorial - Making Music</h1>
 
 <p>While we can’t play an MP3 file or a Youtube clip (because the Arduino isn’t powerful enough), we can still make the tones from last time particular notes, ones that match up to the notes on a piano. Then if we copy the notes from real music sheets, combine that with delay codes that match up to how long to play the note for, we can play actual songs!</p>
 
 <p>Unfortunately, remembering all the numbers for every note would be difficult. We actually used a few last time, the number “262” is “Middle C”, the very middle key on a piano or keyboard, and the middle note when drawing music notes on paper. The notes in the activity which were <code class="language-c highlighter-rouge"><span class="mi">262</span><span class="p">,</span> <span class="mi">294</span><span class="p">,</span> <span class="mi">330</span><span class="p">,</span> <span class="mi">349</span><span class="p">,</span> <span class="mi">392</span><span class="p">,</span> <span class="mi">440</span><span class="p">,</span> <span class="mi">494</span><span class="p">,</span> <span class="mi">554</span></code> are the white keys from Middle C up to the next C note.</p>
 
-<p><img src="assets/img/keyboardNotes.PNG" alt="img" /></p>
+<p><img src="../../assets/img/keyboardNotes.PNG" alt="img" /></p>
 
 <p>But if you’ve used a piano before, you’ll know that we also have all the BLACK keys. These are called sharps or flats. When it’s a sharp it’s named after the white key on its left, and if it’s a flat, it’s named after the key on its right.</p>
 
@@ -86,11 +57,11 @@
 
 <p>The next image is very wide, showing the entire score (notes) for the whole song we’re playing. Click on it and work your way through each bar of music, leaving a gap after each one so it’s easy to work out where you’re up to.</p>
 
-<p><a href="assets/img/wholeMusic.png"><img src="assets/img/wholeMusic.png" alt="img" /></a></p>
+<p><a href="../../assets/img/wholeMusic.png"><img src="../../assets/img/wholeMusic.png" alt="img" /></a></p>
 
 <p>The first bar is the 6 notes we have already written. Look closely at the notes in the picture and the code we have written</p>
 
-<p><img src="assets/img/zoomedMusic.png" alt="img" /></p>
+<p><img src="../../assets/img/zoomedMusic.png" alt="img" /></p>
 
 <ul>
   <li>The first note is labelled E5. Our code says <code class="language-c highlighter-rouge"><span class="n">NOTE_E5</span></code></li>
@@ -100,7 +71,7 @@
   <li>Now leave a gap line in the code, because the line at the end is the bar, finishing this group of six notes.</li>
 </ul>
 
-<p><img src="assets/img/noteLengths.PNG" alt="img" /></p>
+<p><img src="../../assets/img/noteLengths.PNG" alt="img" /></p>
 
 <p>Make your way through the whole song. Part way through the music I stopped including the note names, so you’ll have to look back to work out what each one is. You don’t need to be able to read music, just find a note that’s on the same line or the same gap between lines. (EG: Notice that the first note is an E5, and it sits on top of the top line. Now notice the E5 that is the third “white” note. Even though it’s a different colour, it’s an E5 because it is sitting on top of that line).</p>
 
