Getting started lesson started but needs images

--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
   
 
   <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
+    <a href="/arduino/gettingstarted/">
+      <img src="assets/img/arduinowithbox.jpg "class="w-full m-0 h-48" />
+      <h2 class="px-4">Getting Started</h2>
+    </a>
+
+    <p class="px-4 pb-3 text-sm">Making sure everything is working, and learning about the IDE and Arduino board</p>
+  </div>
+  
+
+  <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
     <a href="/arduino/buzzer/">
-      <img src="assets/img/buzzerimage.jpg "class="w-full m-0" />
+      <img src="assets/img/buzzerimage.jpg "class="w-full m-0 h-48" />
       <h2 class="px-4">Buzzer 1</h2>
     </a>
 
@@ -35,7 +45,7 @@
 
   <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
     <a href="/arduino/buzzer2/">
-      <img src="assets/img/musicpiano.jpg "class="w-full m-0" />
+      <img src="assets/img/musicpiano.jpg "class="w-full m-0 h-48" />
       <h2 class="px-4">Buzzer 2</h2>
     </a>
 
