Fixed relative link on buzzer2 for notes.txt

--- a/arduino/buzzer2/index.html
+++ b/arduino/buzzer2/index.html
@@ -34,7 +34,7 @@
 
 <p>So, we need to know a <code class="language-c highlighter-rouge"><span class="n">tone</span></code> number for EVERY key on a piano, including the black keys. It would be nice if we could use the letter codes, and then number them from the lowest note as C1 up to the highest note as C8. We could use CS to say “C-Sharp”</p>
 
-<p><a href="assets/code/notes.txt">Clicking on this link</a> will take you to a text file that you can copy that defines a whole bunch of named notes using this pattern. It’s not a complicated file, just very long. Open it up and copy the whole thing into a new Arduino Sketch.</p>
+<p><a href="../../assets/code/notes.txt">Clicking on this link</a> will take you to a text file that you can copy that defines a whole bunch of named notes using this pattern. It’s not a complicated file, just very long. Open it up and copy the whole thing into a new Arduino Sketch.</p>
 
 <p>At the very bottom is our regular <code class="language-c highlighter-rouge"><span class="kt">void</span> <span class="n">setup</span><span class="p">()</span></code> and <code class="language-c highlighter-rouge"><span class="kt">void</span> <span class="n">loop</span><span class="p">()</span></code> spots. Like our first buzzer lesson, we’re going to put our code in <code class="language-c highlighter-rouge"><span class="n">setup</span></code> so it only runs once when we press the reset button.</p>
 
