Added led lesson

--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
   
 
   <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
+    <a href="/arduino/morelights/">
+      <img src="assets/img/arduinolessons/ledrainbow.jpg "class="w-full m-0 h-48" />
+      <h2 class="px-4">LED upgrade</h2>
+    </a>
+
+    <p class="px-4 pb-3 text-sm">Upgrading to more and better blinky lights</p>
+  </div>
+  
+
+  <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
+    <a href="/arduino/buttons1/">
+      <img src="assets/img/arduinolessons/buttons.jpg "class="w-full m-0 h-48" />
+      <h2 class="px-4">Buttons 1</h2>
+    </a>
+
+    <p class="px-4 pb-3 text-sm">Start using buttons as inputs so the Arduino responds to you</p>
+  </div>
+  
+
+  <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
     <a href="/arduino/buzzer/">
       <img src="assets/img/buzzerimage.jpg "class="w-full m-0 h-48" />
       <h2 class="px-4">Buzzer 1</h2>
