did button1 and started 2

--- a/index.html
+++ b/index.html
@@ -44,19 +44,9 @@
   
 
   <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
-    <a href="/arduino/buttons1/">
-      <img src="assets/img/arduinolessons/buttons.jpg "class="w-full m-0 h-48" />
-      <h2 class="px-4">Buttons 1</h2>
-    </a>
-
-    <p class="px-4 pb-3 text-sm">Start using buttons as inputs so the Arduino responds to you</p>
-  </div>
-  
-
-  <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
     <a href="/arduino/buzzer/">
       <img src="assets/img/buzzerimage.jpg "class="w-full m-0 h-48" />
-      <h2 class="px-4">Buzzer 1</h2>
+      <h2 class="px-4">Making noise</h2>
     </a>
 
     <p class="px-4 pb-3 text-sm">Learn how to use a buzzer to make annoying beeps, clicks and buzzes</p>
@@ -64,9 +54,29 @@
   
 
   <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
+    <a href="/arduino/buttons1/">
+      <img src="assets/img/arduinolessons/buttons.jpg "class="w-full m-0 h-48" />
+      <h2 class="px-4">Buttons</h2>
+    </a>
+
+    <p class="px-4 pb-3 text-sm">Start using buttons as inputs so the Arduino responds to you</p>
+  </div>
+  
+
+  <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
+    <a href="/arduino/buttons2/">
+      <img src="assets/img/arduinolessons/lotsofbuttons.jpg "class="w-full m-0 h-48" />
+      <h2 class="px-4">More buttons</h2>
+    </a>
+
+    <p class="px-4 pb-3 text-sm">What's better than a button and a light? More buttons, more lights!</p>
+  </div>
+  
+
+  <div class="w-64 m-2 border shadow-lg rounded-lg overflow-hidden">
     <a href="/arduino/buzzer2/">
       <img src="assets/img/musicpiano.jpg "class="w-full m-0 h-48" />
-      <h2 class="px-4">Buzzer 2</h2>
+      <h2 class="px-4">Buzzy Music</h2>
     </a>
 
     <p class="px-4 pb-3 text-sm">Taking the buzzer to the next level by coding actual musical frequencies and making songs, as well as working out how to code your own song</p>
