--- a/arduino/buzzer2/index.html
+++ b/arduino/buzzer2/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Buzzer 2</title>
+  <title>Buzzy Music</title>
   <link rel="stylesheet" href="/assets/css/site.css">
 </head>
 
